All external links to new tab

--- a/static/jade/components/footer.jade
+++ b/static/jade/components/footer.jade
@@ -1,11 +1,11 @@
 footer
   .container
     footer
-      a(href='https://github.com/tricoder42/cz.pycon.org-2015/blob/feature/code-of-conduct/code-of-conduct.md')
+      a(href='https://github.com/tricoder42/cz.pycon.org-2015/blob/feature/code-of-conduct/code-of-conduct.md', target='_blank')
         | Code of Conduct
 
       p.psf-trademark
-        a(href='https://www.python.org/psf/trademarks/pycon/') PyCon™
+        a(href='https://www.python.org/psf/trademarks/pycon/', target='_blank') PyCon™
         |  is a trademark for worldwide conference activities claimed by
-        a(href='https://www.python.org/psf-landing/')  Python Software Foundation
+        a(href='https://www.python.org/psf-landing/', target='_blank')  Python Software Foundation
         | .
