Fixed URL to COC

--- a/static/jade/components/footer.jade
+++ b/static/jade/components/footer.jade
@@ -1,7 +1,7 @@
 footer
   .container
     footer
-      a(href='https://github.com/tricoder42/cz.pycon.org-2015/blob/feature/code-of-conduct/code-of-conduct.md', target='_blank')
+      a(href='https://github.com/pyvec/cz.pycon.org-2015/blob/master/code-of-conduct.md', target='_blank')
         | Code of Conduct
 
       p.psf-trademark
