--- a/static/jade/components/navbar.jade
+++ b/static/jade/components/navbar.jade
@@ -12,12 +12,12 @@ div
       .collapse.navbar-collapse#main-navbar
         ul.nav.navbar-nav
           li
-            a(href='#section-speakers') Speakers
+            a(href='/#section-speakers') Speakers
           li
-            a(href='#section-schedule') Schedule
+            a(href='/#section-schedule') Schedule
           li
-            a(href='#section-tickets') Tickets
+            a(href='/#section-tickets') Tickets
           li
-            a(href='#section-sponsors') Sponsors
+            a(href='/#section-sponsors') Sponsors
           li
-            a(href='#section-contact') Contact
+            a(href='/#section-contact') Contact
