--- a/static/jade/pages/timeline.jade
+++ b/static/jade/pages/timeline.jade
@@ -1,80 +1,81 @@
 h2.text-center Schedule
 
-div.row
-  ul.ul-timeline.col-md-10.col-md-offset-1
-    li
-      .timeline-badge.warning
-        i.glyphicon.glyphicon-check
-      .timeline-panel
-        .timeline-heading
-          h4.timeline-title Django Girls Workshop
-          p
-            small.text-muted
-              i.glyphicon.glyphicon Friday, Nov 13 - Daytime
+div.container
+  div.row
+    ul.ul-timeline.col-md-10.col-md-offset-1
+      li
+        .timeline-badge.warning
+          i.glyphicon.glyphicon-check
+        .timeline-panel
+          .timeline-heading
+            h4.timeline-title Django Girls Workshop
+            p
+              small.text-muted
+                i.glyphicon.glyphicon Friday, Nov 13 - Daytime
 
-        .timeline-body
-          p.
-            The world famous Django Girls workshop is coming back to Brno!
-            This one-day workshop aims to introduce women to the world of technology
-            and open source. This workshop requires advance registration. For details,
-            check out the #[a(href="https://djangogirls.org/brno/", target="_blank") Django Girls Brno] website.
+          .timeline-body
+            p.
+              The world famous Django Girls workshop is coming back to Brno!
+              This one-day workshop aims to introduce women to the world of technology
+              and open source. This workshop requires advance registration. For details,
+              check out the #[a(href="https://djangogirls.org/brno/", target="_blank") Django Girls Brno] website.
 
-    li.timeline-inverted
-      .timeline-badge.info
-        i.glyphicon.glyphicon-credit-card
-      .timeline-panel
-        .timeline-heading
-          h4.timeline-title Pre-Registration Welcome Social
-          p
-            small.text-muted
-              i.glyphicon.glyphicon Friday, Nov 14 - Evening
-        .timeline-body
-          p.
-            If you are in Brno, stop by and pick up your conference badge, meet other
-            attendees, and say hello. Exact time and location to be announced soon.
+      li.timeline-inverted
+        .timeline-badge.info
+          i.glyphicon.glyphicon-credit-card
+        .timeline-panel
+          .timeline-heading
+            h4.timeline-title Pre-Registration Welcome Social
+            p
+              small.text-muted
+                i.glyphicon.glyphicon Friday, Nov 14 - Evening
+          .timeline-body
+            p.
+              If you are in Brno, stop by and pick up your conference badge, meet other
+              attendees, and say hello. Exact time and location to be announced soon.
 
-    li
-      .timeline-badge.info
-        i.glyphicon.glyphicon-credit-card
-      .timeline-panel
-        .timeline-heading
-          h4.timeline-title Day 1 - Talks
-          p
-            small.text-muted
-              i.glyphicon.glyphicon Saturday, Nov 14 - Daytime
-        .timeline-body
-          p.
-            Keynotes and talks about Python and how it's used in different environments.
-            From building beautiful Django-pony websites to analyzing terabytes of
-            data in science institutes, we're going to select the most diverse talks
-            from all possible fields.
+      li
+        .timeline-badge.info
+          i.glyphicon.glyphicon-credit-card
+        .timeline-panel
+          .timeline-heading
+            h4.timeline-title Day 1 - Talks
+            p
+              small.text-muted
+                i.glyphicon.glyphicon Saturday, Nov 14 - Daytime
+          .timeline-body
+            p.
+              Keynotes and talks about Python and how it's used in different environments.
+              From building beautiful Django-pony websites to analyzing terabytes of
+              data in science institutes, we're going to select the most diverse talks
+              from all possible fields.
 
-    li.timeline-inverted
-      .timeline-badge.info
-        i.glyphicon.glyphicon-credit-card
-      .timeline-panel
-        .timeline-heading
-          h4.timeline-title Conference Party
-          p
-            small.text-muted
-              i.glyphicon.glyphicon Saturday, Nov 14 - Evening
-        .timeline-body
-          p.
-            Our main conference party! Time and location will be announced soon.
+      li.timeline-inverted
+        .timeline-badge.info
+          i.glyphicon.glyphicon-credit-card
+        .timeline-panel
+          .timeline-heading
+            h4.timeline-title Conference Party
+            p
+              small.text-muted
+                i.glyphicon.glyphicon Saturday, Nov 14 - Evening
+          .timeline-body
+            p.
+              Our main conference party! Time and location will be announced soon.
 
-    li
-      .timeline-badge
-        i.glyphicon.glyphicon-credit-card
-      .timeline-panel
-        .timeline-heading
-          h4.timeline-title Day 2 - Sprints - Daytime
-          p
-            small.text-muted
-              i.glyphicon.glyphicon Sunday, Nov 15
-        .timeline-body
-          p.
-            Project sprints and hackfests for all things Python. Sprints are a great
-            way to work together with like-minded people towards shared goals. You can
-            fix bugs, create new and interesting tools, write documentation, or even
-            run a mini-workshop! We will publish a Wiki to coordinate sprints closer
-            to the conference day. Stay tuned!
+      li
+        .timeline-badge
+          i.glyphicon.glyphicon-credit-card
+        .timeline-panel
+          .timeline-heading
+            h4.timeline-title Day 2 - Sprints - Daytime
+            p
+              small.text-muted
+                i.glyphicon.glyphicon Sunday, Nov 15
+          .timeline-body
+            p.
+              Project sprints and hackfests for all things Python. Sprints are a great
+              way to work together with like-minded people towards shared goals. You can
+              fix bugs, create new and interesting tools, write documentation, or even
+              run a mini-workshop! We will publish a Wiki to coordinate sprints closer
+              to the conference day. Stay tuned!
