Better team page

--- a/static/jade/components/navbar.jade
+++ b/static/jade/components/navbar.jade
@@ -20,4 +20,6 @@ div
           li
             a(href='/#section-sponsors') Sponsors
           li
+            a(href='/team.html') Team
+          li
             a(href='/#section-contact') Contact
