--- a/static/jade/real_pages/team.jade
+++ b/static/jade/real_pages/team.jade
@@ -9,17 +9,43 @@ html(lang='en-us')
       .row
         .col-md-4
           img(src='https://pbs.twimg.com/profile_images/528237673563959297/yYJxmlNO.png', alt='')
-          p.name Tomáš Ehrlich
-          p.description I don't think. I do things. #triathlon #python #life #universe and #everything
+          p.name
+            #[a(href="https://twitter.com/tomas_ehrlich", target="_blank") Tomáš Ehrlich]
+          p.description I'll take care of as much bureaucracy as possible -- finding venue and talking to sponsors to support our event. I should be some kind of middleware between Pyvec and PyCon, so the most work is done by myself and Pyvec is involved only for necessary tasks.
         .col-md-4
           img(src='https://pbs.twimg.com/profile_images/1225634759/gravatar150.png', alt='')
-          p.name Honza Javorek
-          p.description API design lover, Czech Python community mascot. Helping @apiaryio with making @apiblueprint the best format for describing web APIs.
+          p.name
+            #[a(href="https://twitter.com/honzajavorek", target="_blank") Honza Javorek]
+          p.description Honza takes care of all social media channels: mostly twitter, but also facebook, linkedin, you-name-it. He has an access to all relevant twitter accounts. Everytime you want to announce anything publicly, simply create task in Media trello board.
         .col-md-4
           img(src='https://pbs.twimg.com/profile_images/598803746722816000/htcvwi8Z.jpg', alt='')
-          p.name Mikey Ariel
-          p.description Tech writer @ #RedHat. #writethedocs documentarian
+          p.name
+            #[a(href="https://twitter.com/thatdocslady", target="_blank") Mikey Ariel]
+          p.description As a former designer, she will help us with logo and website design. Since she's also the only native english speaker, she will review all texts and write some content for website. And as the most experienced conference organizer, she'll guide us and coach us :)
 
+      .row
+        .col-md-4
+          img(src='https://scontent-vie1-1.xx.fbcdn.net/hphotos-xfp1/v/t1.0-9/10998408_437239343108549_5904447296315910400_n.jpg?oh=41947ed55b2907a078c3878b6cc0a553&oe=56366A3F', alt='')
+          p.name
+            #[a(href="https://www.facebook.com/natali.debosque", target="_blank") Natália Sedláková]
+          p.description Natali is the main organizer of DjangoGirls Brno. She will take care of preparations for event (select applicants, communicate with applicants and couches) and moderating event on day DG.
+        .col-md-4
+          img(src='https://sk.gravatar.com/userimage/8116216/d3c0082d1cc96ed303565970e447b254.jpg?size=400', alt='')
+          p.name
+            #[a(href="https://twitter.com/netamn92", target="_blank") Stanislav Komanec]
+          p.description Stano is responsible for website and related technologies (like forms, ti.to, etc.). He has the access rights to publish new versions of website. Everytime you want to post some content on website, create issue or pull request at Github.
+        .col-md-4
+          img(src='https://scontent-vie1-1.xx.fbcdn.net/hphotos-xat1/t31.0-8/11536487_10206028010931663_6339000516200778558_o.jpg', alt='')
+          p.name
+            #[a(href="https://www.facebook.com/martin.matuszek", target="_blank") Martin Matuszek]
+          p.description When conference attendees receive their bag with t-shirt, brochure and other goodies, everything will be managed by Naomak. Basically it includes find a good supplier for quality t-shirts, collects promotional stuff from sponsors and order brochures with conference info.
+
+      .row
+        .col-md-4
+          img(src='https://scontent-vie1-1.xx.fbcdn.net/hphotos-xpt1/t31.0-8/10463609_10205508922336237_4028946742293895321_o.jpg', alt='')
+          p.name
+            #[a(href="https://twitter.com/styrax_raveon", target="_blank") Martin Hořák]
+          p.description DJ Styrax manages events like dinner/party and also finds food supplier for event (both coffe and lunch). If you have any idea for after party, let him know, but he is already capable to make it awesome :)
 
     include ../components/footer
     include ../components/js
