--- a/static/jade/pages/speakers.jade
+++ b/static/jade/pages/speakers.jade
@@ -2,19 +2,14 @@ h2.text-center Speakers
 
 .container
   .row
-    .col-md-4
-      img(src='https://pbs.twimg.com/profile_images/598803746722816000/htcvwi8Z.jpg', alt='')
-      p.name Mikey Ariel
-      p.description Tech writer @ #RedHat. #writethedocs documentarian
-    .col-md-4
+    .col-md-6
       img(src='https://pbs.twimg.com/profile_images/58051305/rusty-mugshot.png', alt='')
       p.name Russell Keith-Magee
       p.description Django Core Developer
-    .col-md-4
+    .col-md-6
       //img(src='http://www.waterfordwine.com/wordpress/wp-content/uploads/2012/01/uncle-sam-wants-you.jpg', alt='')
       .placeholder #[span ?]
-      p.name Your name
+      p.name Call For Proposals
       p.description
-        a(href='mailto:' + cont
-  ctEmail)
-          | Write us!
+        a(href='http://goo.gl/forms/8Tc22glxxc', target='_blank')
+          | Submit a Proposal
