Fixed homeworld caps.

--- a/static/jade/pages/home.jade
+++ b/static/jade/pages/home.jade
@@ -10,5 +10,5 @@
 .claim
   .container
     p.lead
-      | The very first Python conference in Czech republic.
+      | The very first Python conference in Czech Republic.
       | Join us for a fun weekend full of talk and sprints about Python and Python-related topics.
