Added new PyCon CZ logo.

--- a/static/scss/_variables.scss
+++ b/static/scss/_variables.scss
@@ -3,10 +3,10 @@
 
 // Theme overrides
 
-$jumbotron-bg: #10162F;
-$jumbotron-color: #fff;
+$jumbotron-bg: #fff;
+$jumbotron-color: #000;
 
-$claim-bg: #5ba4c0;
+$claim-bg: #ddd;
 
 $tricolor: #fff #A72624 #5ba4c0;
 
