Fixed font size in header.

--- a/static/scss/pyconcz.scss
+++ b/static/scss/pyconcz.scss
@@ -35,14 +35,21 @@ h2 {
 .jumbotron {
   margin-bottom: 0;
 
-  h1 {
-    text-outline: 1px solid $jumbotron-color;
+  h1 .label {
+    display: none;
   }
 
   .python-logo {
     $logo-size: 200px;
     width: auto;
     height: $logo-size;
+  }
+
+  .event-date,
+  .event-location {
+    margin-top: 1em;
+    font-weight: bold;
+    font-size: 22px;
   }
 }
 
