--- a/static/jade/pages/home.jade
+++ b/static/jade/pages/home.jade
@@ -1,7 +1,8 @@
 .jumbotron
   .container
-    img.python-logo(src='/static/images/pycon-cz-logo.png')
-    h1 PyCon CZ 2015
+    h1
+      span.label PyCon CZ 2015
+      img.python-logo(src='/static/images/pycon-cz-logo.png')
     .row
       .col-md-3.col-md-offset-3
         p.event-location Brno, Czech Republic
