Added copy for speakers section.

--- a/static/jade/pages/speakers.jade
+++ b/static/jade/pages/speakers.jade
@@ -1,7 +1,7 @@
 h2.text-center Speakers
 
 .container
-  .row
+  .row  
     .col-md-6
       img(src='https://pbs.twimg.com/profile_images/58051305/rusty-mugshot.png', alt='')
       p.name Russell Keith-Magee
@@ -13,3 +13,16 @@ h2.text-center Speakers
       p.description
         a(href='http://goo.gl/forms/8Tc22glxxc', target='_blank')
           | Submit a Proposal
+
+  .row.cfp
+    .col-md-8.col-md-push-2
+      h3 Wanna get on stage?
+      p.lead.
+        PyCon CZ is community-driven event focused on Python programming language.
+        We would like to gather the most interesting talks from various fields.
+        
+      p.lead.
+        If you think you have something awesome to say,
+        #[a(href='http://goo.gl/forms/8Tc22glxxc', target='_blank') submit your talk].
+        
+  
