--- a/static/jade/pages/sponsors.jade
+++ b/static/jade/pages/sponsors.jade
@@ -1,6 +1,16 @@
 h2 Our sponsors
 
 .container
+  .row
+    .col-md-8.col-md-push-2
+      p.lead.
+         Regional PyCons are well-known for attracting developers, sysadmins, writers,
+         designers, and community members from all over.
+         This year we expect at least 250 attendees to whom you could present your
+         company. If you are interested in sponsoring our event, see our
+         #[a(href="/sponsorship.html") sponsorship packages].
+
+.container
   .gold
     .sponsor-placeholder
       .sponsor
