Added text to venue section.

--- a/static/scss/pycon/_map.scss
+++ b/static/scss/pycon/_map.scss
@@ -10,7 +10,7 @@
 
     @media (min-width: $screen-sm) {
       position: absolute;
-      top: 110px;
+      bottom: 0px;
       left: 120px;
       z-index: 1000;
       width: 250px;
