--- a/static/jade/real_pages/sponsorship.jade
+++ b/static/jade/real_pages/sponsorship.jade
@@ -7,7 +7,7 @@ html(lang='en-us')
     include ../pages/home
 
     .sponsorship.container
-      h2.text-center PyCon CZ 2015 Sponsorship
+      h2.text-center PyCon CZ 2015 Sponsorship Packages
       .row
         p.lead #[a(href="/", ) PyCon Czech Republic] is a two-day conference organized by the Python community for the Python community. The conference will include 1 full day of talks featuring 2 international keynote speakers (all sessions will be held in English), and 1 day of sprints and workshops where Pythonistas can get together and work on their open source projects.
         p.lead This year is the first edition of PyCon CZ, and we look forward to bringing the tradition of diverse and insightful speakers, top-quality venues, and a great atmosphere to Czech Republic. Regional PyCons are well-known for attracting developers, sysadmins, writers, designers, and community members from all over.
