Fixed lead centering.

--- a/static/scss/pyconcz.scss
+++ b/static/scss/pyconcz.scss
@@ -55,7 +55,7 @@ h2 {
 
 .lead {
   font-size: 1.3em;
-  text-align: center;
+  text-align: left;
 }
 
 .claim {
@@ -67,5 +67,6 @@ h2 {
 
   .lead {
     margin: 0;
+    text-align: center;
   }
 }
