--- a/static/jade/pages/home.jade
+++ b/static/jade/pages/home.jade
@@ -1,15 +1,2 @@
-.jumbotron
-  .container
-    h1
-      span.label PyCon CZ 2015
-      img.python-logo(src='/static/images/pycon-cz-logo.png')
-    .row
-      .col-md-3.col-md-offset-3
-        p.event-location Brno, Czech Republic
-      .col-md-3
-        p.event-date November 14-15, 2015
-.claim
-  .container
-    p.lead
-      | The very first Python conference in Czech Republic.
-      | Join us for a fun weekend full of talk and sprints about Python and Python-related topics.
+include ../components/logo
+include ../components/claim
