--- a/static/jade/components/head.jade
+++ b/static/jade/components/head.jade
@@ -1,6 +1,9 @@
 meta(charset='utf-8')
 title PyCon CZ 2015
 meta(name='viewport', content='width=device-width, initial-scale=1.0')
+meta(name='keywords', content='python, PyCon, Brno, django, conference')
+meta(name='description', content='The very first Python conference in Czech Republic')
+link(rel='shortcut icon', href='http://www.unixstickers.com/image/data/stickers/python/python.sh.png', type='image/png')
 //if lt IE 9
   script(src='https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js')
 link(href='/static/css/pyconcz.css', rel='stylesheet')
