Added DG to sponsorsih

--- a/static/jade/real_pages/sponsorship.jade
+++ b/static/jade/real_pages/sponsorship.jade
@@ -23,6 +23,7 @@ html(lang='en-us')
             li Full width logo on the event website
             li 3 tickets
             li Display unlimited promotional (“Swag”) items
+            li Own booth in venue hall
             li Address audience during a sponsorship lightning talk (5 minutes)
             li Space for copy in welcome/goodbye emails to attendees
 
@@ -33,6 +34,7 @@ html(lang='en-us')
             li Large logo on the event website
             li 2 tickets
             li Physical logo at the event (eg. banners, badge, stickers, etc)
+            li Own booth in venue hall
             li Sponsorship branding, one of the following
               ul
                 li Name the lunch
@@ -47,6 +49,14 @@ html(lang='en-us')
             li 1 ticket
             li Small logo on the event website
             li Display 1 promotional (“Swag”) item
+
+      .row
+        .col-md-6.col-md-push-3
+          h3 DjangoGirls
+          p.text-center As a DjangoGirls sponsor, you will receive the following benefits:
+            ul.text-left
+              li Small logo on the event website
+              li Display 1 promotional (“Swag”) item
 
 
   .claim.sp-claim
