Added Honza Kral to team page

--- a/static/jade/real_pages/team.jade
+++ b/static/jade/real_pages/team.jade
@@ -12,19 +12,19 @@ html(lang='en-us')
           p.name
             #[a(href="https://twitter.com/tomas_ehrlich", target="_blank") Tomáš Ehrlich]
           p.description C3PO &amp; Sponsors
-          
+
         .col-md-3
           img(src='https://pbs.twimg.com/profile_images/1225634759/gravatar150.png', alt='')
           p.name
             #[a(href="https://twitter.com/honzajavorek", target="_blank") Honza Javorek]
           p.description Media &amp; Promotion
-          
+
         .col-md-3
           img(src='https://pbs.twimg.com/profile_images/598803746722816000/htcvwi8Z.jpg', alt='')
           p.name
             #[a(href="https://twitter.com/thatdocslady", target="_blank") Mikey Ariel]
           p.description Tickets &amp; Mentoring
-  
+
         .col-md-3
           img(src='/static/images/team/natali.jpg', alt='')
           p.name
@@ -32,23 +32,29 @@ html(lang='en-us')
           p.description DjangoGirls organizer
 
       .row
-        .col-md-4
+        .col-md-3
           img(src='https://sk.gravatar.com/userimage/8116216/d3c0082d1cc96ed303565970e447b254.jpg?size=400', alt='')
           p.name
             #[a(href="https://twitter.com/netman92", target="_blank") Stanislav Komanec]
           p.description Website administrator
-          
-        .col-md-4
+
+        .col-md-3
           img(src='https://scontent-vie1-1.xx.fbcdn.net/hphotos-xat1/t31.0-8/11536487_10206028010931663_6339000516200778558_o.jpg', alt='')
           p.name
             #[a(href="https://www.facebook.com/martin.matuszek", target="_blank") Martin Matuszek]
           p.description Swag &amp; collectables
-          
-        .col-md-4
+
+        .col-md-3
           img(src='https://scontent-vie1-1.xx.fbcdn.net/hphotos-xpt1/t31.0-8/10463609_10205508922336237_4028946742293895321_o.jpg', alt='')
           p.name
             #[a(href="https://twitter.com/styrax_raveon", target="_blank") Martin Hořák]
           p.description Events manager
-          
-    include ../components/footer
+
+        .col-md-3
+          img(src='https://scontent-fra3-1.xx.fbcdn.net/hprofile-xfa1/l/t31.0-1/c84.0.749.749/265598_10150223402570824_5262769_o.jpg', alt='')
+          p.name
+            #[a(href="https://twitter.com/honzakral", target="_blank") Honza Král]
+          p.description Speakers
+
+include ../components/footer
     include ../components/js
