--- a/static/jade/components/head.jade
+++ b/static/jade/components/head.jade
@@ -6,4 +6,5 @@ meta(name='description', content='The very first Python conference in Czech Repu
 link(rel='shortcut icon', href='http://www.unixstickers.com/image/data/stickers/python/python.sh.png', type='image/png')
 //if lt IE 9
   script(src='https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js')
+link(href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css', rel='stylesheet')
 link(href='/static/css/pyconcz.css', rel='stylesheet')
