--- a/static/jade/components/navbar.jade
+++ b/static/jade/components/navbar.jade
@@ -23,3 +23,13 @@ div
             a(href='/team.html') Team
           li
             a(href='/#section-contact') Contact
+        ul.right.nav
+          li
+            a(href='https://twitter.com/pyconcz', target='_blank')
+              i.fa.fa-twitter
+          li
+            a(href='https://www.facebook.com/events/1624916497723396/', target='_blank')
+              i.fa.fa-facebook
+          li
+            a(href='https://github.com/pyvec/cz.pycon.org-2015', target='_blank')
+              i.fa.fa-github
