--- a/static/jade/components/footer.jade
+++ b/static/jade/components/footer.jade
@@ -9,3 +9,7 @@ footer
         |  is a trademark for worldwide conference activities claimed by
         a(href='https://www.python.org/psf-landing/', target='_blank')  Python Software Foundation
         | .
+
+      p
+        a(href="mailto:info@pycon.cz")
+          | Feel free to contact us!
