--- a/static/jade/pages/timeline.jade
+++ b/static/jade/pages/timeline.jade
@@ -35,7 +35,7 @@ div.container
               attendees, and say hello. Exact time and location to be announced soon.
 
       li
-        .timeline-badge.info
+        .timeline-badge.danger
           i.glyphicon.glyphicon-credit-card
         .timeline-panel
           .timeline-heading
