--- a/static/jade/components/logo.jade
+++ b/static/jade/components/logo.jade
@@ -2,9 +2,10 @@
   .container
     h1
       span.label PyCon CZ 2015
-      img.python-logo(src='/static/images/pycon-cz-logo.png')
+      //- img.python-logo(src="/static/images/pycon-cz-logo.png")
+      img.python-logo(alt="PyCon CZ", src="/static/images/pycon-cz-logo.svg", onerror="this.onerror = null; this.src = '/static/images/pycon-cz-logo.png'")
     .row
-      .col-md-3.col-md-offset-3
+      .col-md-4.col-md-offset-2
         p.event-location Brno, Czech Republic
-      .col-md-3
+      .col-md-4
         p.event-date November 14-15, 2015
