--- a/static/jade/real_pages/sponsorship.jade
+++ b/static/jade/real_pages/sponsorship.jade
@@ -61,7 +61,7 @@ html(lang='en-us')
 
   .claim.sp-claim
     span.lead
-      | Please direct all inquiries to <strong>Tomáš Ehrlich</strong> at #[a(href="mailto:tomas.ehrlich@gmail.com", ) tomas.ehrlich@gmail.com]
+      | Please direct all inquiries to <strong>Tomáš Ehrlich</strong> at #[a(href="mailto:info@pycon.cz", ) info@pycon.cz]
 
 
   include ../components/footer
