--- a/static/jade/components/footer.jade
+++ b/static/jade/components/footer.jade
@@ -7,7 +7,8 @@ footer
       p.psf-trademark
         a(href='https://www.python.org/psf/trademarks/pycon/', target='_blank') PyCon™
         |  is a trademark for worldwide conference activities claimed by
-        a(href='https://www.python.org/psf-landing/', target='_blank')  Python Software Foundation
+        a(href='https://www.python.org/psf-landing/', target='_blank')
+        Python Software Foundation
         | .
 
       p
