--- a/static/jade/components/navbar.jade
+++ b/static/jade/components/navbar.jade
@@ -22,7 +22,7 @@ div
           li
             a(href='/team.html') Team
           li
-            a(href='/#section-contact') Contact
+            a(href='/#section-venue') Venue
         ul.right.nav
           li
             a(href='https://twitter.com/pyconcz', target='_blank')
