--- a/static/jade/index.jade
+++ b/static/jade/index.jade
@@ -17,7 +17,7 @@ html(lang='en-us')
       include ./pages/tickets
     section#section-sponsors.sponsors
       include ./pages/sponsors
-    section#section-contact.map
+    section#section-venue.map
       include ./pages/map
 
     include components/footer
