timeline: sprints: Move "Daytime" to the date section

--- a/static/jade/pages/timeline.jade
+++ b/static/jade/pages/timeline.jade
@@ -68,10 +68,10 @@ div.container
           i.glyphicon.glyphicon-credit-card
         .timeline-panel
           .timeline-heading
-            h4.timeline-title Day 2 - Sprints - Daytime
+            h4.timeline-title Day 2 - Sprints
             p
               small.text-muted
-                i.glyphicon.glyphicon Sunday, Nov 15
+                i.glyphicon.glyphicon Sunday, Nov 15 - Daytime
           .timeline-body
             p.
               Project sprints and hackfests for all things Python. Sprints are a great
