--- a/static/jade/components/head.jade
+++ b/static/jade/components/head.jade
@@ -3,7 +3,8 @@ title PyCon CZ 2015
 meta(name='viewport', content='width=device-width, initial-scale=1.0')
 meta(name='keywords', content='Python, PyCon, Brno, Django, conference, Česká Republika, konference')
 meta(name='description', content='The very first Python conference in Czech Republic')
-link(rel='shortcut icon', href='http://www.unixstickers.com/image/data/stickers/python/python.sh.png', type='image/png')
+link(rel='shortcut icon', href='/static/images/pycon-cz-logo-icon.svg', type='image/svg+xml')
+link(rel='shortcut icon', href='/static/images/pycon-cz-logo-icon.png', type='image/png')
 //if lt IE 9
   script(src='https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js')
 link(href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css', rel='stylesheet')
