Ticket sale starts on MOnday.

--- a/static/jade/pages/tickets.jade
+++ b/static/jade/pages/tickets.jade
@@ -2,7 +2,7 @@ h2.text-center Tickets
 .container
   .row
     .col-md-12
-      p Tickets will go on sale on September 3. Stay tuned!
+      p Tickets will go on sale on Monday, 7th September. Stay tuned!
 
       //script(src="https://js.tito.io/v1", async)
       //tito-widget(event="pyvec/pycon-cz-2015", ssl-check-disabled)
