Added bigger logo

--- a/static/jade/components/head.jade
+++ b/static/jade/components/head.jade
@@ -13,8 +13,8 @@ link(href='/static/css/pyconcz.css', rel='stylesheet')
 
 //Facebook Meta
 meta( property="og:title",    content="PyCon CZ 2015" )
-meta( property="og:site_name",  content="cz.pycon.org/" )
+meta( property="og:site_name",  content="cz.pycon.org" )
 meta( property="og:description", content="The very first Python conference in the Czech Republic" )
-meta( property="og:image", content="http://cz.pycon.org/static/images/pycon-cz-logo.png" )
+meta( property="og:image", content="http://cz.pycon.org/static/images/pycon-cz-logo-fb.png" )
 meta( property="og:url", content="http://cz.pycon.org/" )
 meta( property="og:type", content="website" )
