Fix my name, picture, and homepage link

--- a/static/jade/real_pages/team.jade
+++ b/static/jade/real_pages/team.jade
@@ -57,9 +57,9 @@ html(lang='en-us')
           p.description Speakers
       .row
         .col-md-3
-          img(src='https://media.licdn.com/media/p/4/000/153/2ef/39d4001.jpg', alt='')
+          img(src='/static/images/team/petr.jpg', alt='')
           p.name
-            #[a(href="https://twitter.com/EnCuKou", target="_blank") Peter Viktorin]
+            #[a(href="http://encukou.cz", target="_blank") Petr Viktorin]
           p.description Sprints &amp; Workshops
 
        .row.text-center.offer-hand
