--- a/static/jade/components/claim.jade
+++ b/static/jade/components/claim.jade
@@ -2,4 +2,4 @@
   .container
     p.lead
       | The very first Python conference in the Czech Republic.
-      | Join us for a fun weekend full of talk and sprints about Python and Python-related topics.
+      | Join us for a fun weekend full of talks and sprints about Python and Python-related topics.
