Updated section about speakers.

--- a/static/jade/index.jade
+++ b/static/jade/index.jade
@@ -9,18 +9,16 @@ html(lang='en-us')
 
     section#section-home.home
       include ./pages/home
-    section#section-speakers.speakers
+    section#speakers.speakers
       include ./pages/speakers
-    section#section-schedule.timeline
+    section#schedule.timeline
       include ./pages/timeline
-    section#section-tickets.tickets
+    section#tickets.tickets
       include ./pages/tickets
-    section#section-sponsors.sponsors
+    section#sponsors.sponsors
       include ./pages/sponsors
-    section#section-venue.map
+    section#venue.map
       include ./pages/map
 
     include components/footer
     include components/js
-
-
