--- a/static/jade/pages/tickets.jade
+++ b/static/jade/pages/tickets.jade
@@ -2,9 +2,9 @@ h2.text-center Tickets
 .container
   .row
     .col-md-12
-      p Tickets are available at 
-      |  
-      a(href="https://ti.to/pyvec/pycon-cz-2015/") https://ti.to/pyvec/pycon-cz-2015/
+      p.lead
+        | Tickets are available at  
+        a(href="https://ti.to/pyvec/pycon-cz-2015/") https://ti.to/pyvec/pycon-cz-2015/
 
       //script(src="https://js.tito.io/v1", async)
       //tito-widget(event="pyvec/pycon-cz-2015", ssl-check-disabled)
