--- a/static/scss/pycon/speakers.scss
+++ b/static/scss/pycon/speakers.scss
@@ -1,26 +1,39 @@
 .speakers {
-  h2 {
-    padding-top: 30px;
+  // keynotes
+  .keynote-speaker {
+    @include make-row;
+
+    margin-top: 20px;
   }
+
+  .keynote-avatar {
+    @include make-md-column(2);
+  }
+
+  .keynote-description {
+    @include make-md-column(10);
+  }
+
+  // speakers
+
+  // common
   img,
   .placeholder {
     width: $images-size;
     height: $images-size;
     border: 1px solid $text-shadow-color;
-    border-radius: $images-size/2;
+    border-radius: 100%;
   }
 
   .name {
-    padding: 20px 0 0;
+    padding: 0;
+    margin-top: 0;
     font-weight: 500;
     font-size: 1.6em;
   }
 
   .description {
-    width: 80%;
-    margin: 0 auto;
     font-size: 1.2em;
-    text-align: center;
   }
 
   .placeholder {
@@ -39,5 +52,14 @@
 
   .cfp {
     margin-top: 50px;
+  }
+
+  .cfp-notice {
+    @extend .alert;
+    @extend .alert-info;
+  }
+
+  .cfp-link {
+    font-weight: bold;
   }
 }
