--- a/static/scss/pyconcz.scss
+++ b/static/scss/pyconcz.scss
@@ -25,7 +25,6 @@ body {
 
 body {
   padding-top: $navbar-height;
-  text-align: center;
 }
 
 section {
@@ -38,6 +37,14 @@ h2 {
   margin-bottom: 50px;
   font-weight: 500;
   font-size: 2.8em;
+  text-align: center;
+}
+
+.container {
+    @media (min-width: $screen-sm) {
+      width: 80%;
+      margin: 0 auto;
+    }
 }
 
 .jumbotron {
@@ -68,12 +75,6 @@ h2 {
 .lead {
   font-size: 1.3em;
   text-align: left;
-}
-
-.home {
-  .lead {
-    text-align: center;
-  }
 }
 
 .claim {
