Fixed links in navigation.

--- a/static/jade/components/navbar.jade
+++ b/static/jade/components/navbar.jade
@@ -12,17 +12,17 @@ div
       .collapse.navbar-collapse#main-navbar
         ul.nav.navbar-nav
           li
-            a(href='/#section-speakers') Speakers
+            a(href='/#speakers') Speakers
           li
-            a(href='/#section-schedule') Schedule
+            a(href='/#schedule') Schedule
           li
-            a(href='/#section-tickets') Tickets
+            a(href='/#tickets') Tickets
           li
-            a(href='/#section-sponsors') Sponsors
+            a(href='/#sponsors') Sponsors
           li
             a(href='/team.html') Team
           li
-            a(href='/#section-venue') Venue
+            a(href='/#venue') Venue
         ul.right.nav
           li
             a(href='https://twitter.com/pyconcz', target='_blank')
