Added links to twitter for keynote speakers.

--- a/static/jade/pages/speakers.jade
+++ b/static/jade/pages/speakers.jade
@@ -20,7 +20,11 @@
     .keynote-avatar
       img(src='/static/images/speakers/amber_brown.jpg', alt='Avatar of Amber Brown')
     .keynote-description
-      h3.name Amber Brown
+      h3.name
+        | Amber Brown 
+        a.speaker-link(href="https://twitter.com/hawkieowl")
+          .fa.fa-twitter
+            
       p.short-description Twisted project Core Developer
       p.description.
         Amber, better known as HawkOwl, is a core developer and release manager
@@ -32,7 +36,10 @@
       img(src='/static/images/speakers/russell_keith_magee.png', alt='Photo of Russel Keith-Magee')
       
     .keynote-description
-      h3.name Russell Keith-Magee
+      h3.name
+        | Russell Keith-Magee 
+        a.speaker-link(href="https://twitter.com/freakboy3742")
+          .fa.fa-twitter
       p.short-description Django Core Developer
       p.description.
         Dr Russell Keith-Magee is a 9 year veteran of the Django core team,
