--- a/static/scss/pycon/speakers.scss
+++ b/static/scss/pycon/speakers.scss
@@ -15,6 +15,14 @@
   }
 
   // speakers
+  .speaker-link {
+    font-size: 0.8em;
+    color: $speakers-social-link-color;
+
+    &:hover {
+      color: $link-hover-color;
+    }
+  }
 
   // common
   img,
