--- a/static/scss/_variables.scss
+++ b/static/scss/_variables.scss
@@ -8,6 +8,8 @@ $jumbotron-color: #000;
 
 $claim-bg: #ddd;
 
+$speakers-social-link-color: #aaa;
+
 $tricolor-red: #A72624;
 $tricolor: #fff #A72624 #5ba4c0;
 
