Added more info to tickets section.

--- a/static/scss/pycon/_tickets.scss
+++ b/static/scss/pycon/_tickets.scss
@@ -1,10 +1,12 @@
 .tickets {
-  .lead {
-    text-align: center;
+  .tickets-link {
+    font-weight: bold;
   }
-  
+
   form {
     width: 90%;
     margin: 0 auto;
   }
+
+  
 }
