Make call-to-action button.

--- a/static/jade/pages/tickets.jade
+++ b/static/jade/pages/tickets.jade
@@ -11,7 +11,9 @@
         |  are now open. We have rates for individuals, corporate 
         | attendees and also for students. It's simple: We want you all to 
         | attend the first year edition of #[strong PyCon CZ]. 
-        a.tickets-link(href=ticketsLink) Join us now!
+      
+      .tickets-join
+        a.btn-tickets(href=ticketsLink) Join us now!
       
       h3 What's included in ticket price
       
