Fixed links in html.

--- a/static/jade/components/head.jade
+++ b/static/jade/components/head.jade
@@ -8,7 +8,7 @@ link(rel='shortcut icon', href='/static/images/pycon-cz-logo-icon.png', type='im
 //if lt IE 9
   script(src='https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js')
 link(href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css', rel='stylesheet')
-link(href='/static/css/pyconcz.css', rel='stylesheet')
+link(href='/2015/static/css/pyconcz.css', rel='stylesheet')
 
 
 //Facebook Meta
