--- a/static/jade/pages/sponsors.jade
+++ b/static/jade/pages/sponsors.jade
@@ -8,7 +8,7 @@ h2 Our sponsors
          designers, and community members from all over.
          This year we expect at least 250 attendees to whom you could present your
          company. If you are interested in sponsoring our event, see our
-         #[a(href="/sponsorship.html") sponsorship packages].
+         #[a(href="/2015/sponsorship.html") sponsorship packages].
 
 .container
   .gold
