Added team members

--- a/static/jade/real_pages/team.jade
+++ b/static/jade/real_pages/team.jade
@@ -62,6 +62,18 @@ html(lang='en-us')
             #[a(href="http://encukou.cz", target="_blank") Petr Viktorin]
           p.description Sprints &amp; Workshops
 
+        .col-md-3
+          img(src='/static/images/team/vehrlich.jpg', alt='')
+          p.name
+            #[a(href="https://twitter.com/melront", target="_blank") Václav Ehrlich ]
+          p.description Photographer
+
+        .col-md-3
+          img(src='/static/images/team/chris.jpg', alt='')
+          p.name
+            #[a(href="https://twitter.com/kejbaly2", target="_blank") Chris Ward]
+          p.description Sponsors
+
        .row.text-center.offer-hand
          #[a(href="mailto:info@pycon.cz?subject=Please, add me to your Slack!", target="_blank") Wanna become part of our team or just offer a hand?]
 
